examples/compiler_errors/adversarial/stage_all_errors/EffectBroken.flx
module EffectBroken {
    fn noisy() -> Unit {
        print("hi")
    }
}
